# SampleProjects

ApiDescription/: README.md
ApiDescription/aident/: openapi.yaml
ApiDescription/cosy/: aicobe_rest_api.yaml  aiqcheck_rest_api.yaml  aisign_rest_api.yaml  aitem_rest_api.yaml  cosy_admin_rest_api.yml  cosy_rest_api.yml
ApiDescription/image-extraction/: imageExtractionAPI.yml
ApiDescription/smama/: smama_rest_api.yml
ApiDescription/tesseract-rest/: tesseract_rest_api.yml
GroovyProjects/TrialGroovy/: .project  pom.xml
JavaProjects/Cucumber/: .project  README.md  pom.xml
JavaProjects/JBehave/: README.md  pom.xml
JavaProjects/Karate/: pom.xml
JavaProjects/Micronaut/: micronaut-cli.yml  pom.xml
JavaProjects/ciTestWithBDD/: Jenkinsfile  pom.xml
JavaProjects/core_base_lib/: pom.xml
JavaProjects/image-extraction-service/: .gitignore  README.md  bitbucket-pipelines.yml  goss.yaml  (+3 more)
PythonProjects/PyMongoWatch/: .gitignore  README.md  setup.cfg  tox.ini
PythonProjects/PyMongoWatch/mongosinglereplica-docker-compose/: adminUserScript.js  docker-compose.yml
PythonProjects/PyMongoWatch/requirements/: test.txt
PythonProjects/PyMongoWatch/src/pymongowatch/: mongowatch.py
PythonProjects/PyMongoWatch/src/pymongowatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PythonProjects/PyMongoWatch/tests/feature/: ssologin.feature  test_ssologin.py
PythonProjects/aiq-check/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bitbucket-pipelines.yml  setup.cfg  setup.py  tox.ini
PythonProjects/aiq-check/jupyter-notebooks/: aiqcheck_demo.ipynb
PythonProjects/aiq-check/requirements/: test.txt
PythonProjects/aiq-check/src/aiqcheck/: __init__.py  cli.py
PythonProjects/aiq-check/src/aiqcheck/detector/: qr.py
PythonProjects/aiq-check/src/aiqcheck/service/: __init__.py  app.py  processor.py
PythonProjects/aiq-check/tests/: __init__.py  test_qr.py  test_version.py
PythonProjects/aiq-check/tests/service/: test_app.py  test_processor.py
PythonProjects/aiq-check/tests/service/BDD/: qr.feature  test_qr.py
PythonProjects/rest-service-module/: .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  pylintrc  setup.cfg  setup.py  tox.ini
PythonProjects/rest-service-module/examples/: app.py  batched_addition_processor.py  example_config.py
PythonProjects/rest-service-module/src/aiserve/: __init__.py  appcreate.py  async_request_handler.py  configuration.py  confparse.py  default_config.py  dictpreserver.py  factory.py  inforesource.py  logger.py  preserver.py  process.py  remfolder.py  resources.py  upload_cli.py  upload_module.py  utils.py
PythonProjects/rest-service-module/tests/: backapp.py  conftest.py  dummyprocessor.py  httptest.py  ssltest.py  test_aiserve_appcreate.py  test_aiserve_confparse.py  test_aiserve_factory.py  test_aiserve_inforesource.py  test_aiserve_logger.py  test_aiserve_process.py  test_aiserve_remfolder.py  test_aiserve_upload.py  test_aiserve_upload_cli.py  test_aiserve_utils.py  test_app_from_processor.py  test_async_request_handler.py  test_dictpreserver.py  test_version.py
QANDA/: README.md
VueJs/: intro.html
core_base_lib/: pom.xml
image-extraction-service/: Dockerfile  README.md  image-extraction-entrypoint.sh  imageExtractionWebsocket.yml  pom.xml
tesseract-rest/: Dockerfile  pom.xml  tesseractOCR-REST-entrypoint.sh
zxingQrCodeDetection/: README.md
(+238 files in other folders)
