[metadata]
name = pymongowatch
description = Python Mongo Watch.

[options]
setup_requires =
  setuptools_scm
package_dir =
    =src
packages = find:
include_package_data = true
install_requires = 
    jsons

[options.packages.find]
where = src

[semantic_release]
version_variable = released_version.txt:released_version
version_source = tag
commit_version_number = true

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-mock
    pytest-bdd
    werkzeug>=1.0.0,<2
develop =
    pylint
    pytest
    pydocstyle
    pytest-cov
    pytest-datadir
    pre-commit
    pymongo>=3.8.0
    dnspython
    mypy
    werkzeug>=1.0.0,<2
service =
    werkzeug>=1.0.0,<2

[mypy]
ignore_missing_imports = true

[isort]
line_length = 88
multi_line_output = 3
known_first_party=Pytest-bdd
include_trailing_comma=True
use_parentheses=True
default_section = THIRDPARTY
force_sort_within_sections=True
order_by_type=False
