[metadata]
name = aiqcheck
description = Qr code detection and extraction service.

[options]
setup_requires =
  setuptools_scm
package_dir =
    =src
packages = find:
include_package_data = true
install_requires =
    jsons
    opencv-python>=4,<=4.2.0.34
    Pillow>=6,<7
    zbar-py
    zxing

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aiqcheck = aiqcheck.cli:entry_point

[semantic_release]
version_variable = released_version.txt:released_version
version_source = tag
commit_version_number = true

[options.extras_require]
tests =
    pytest
    pytest-flask
    pytest-datadir
    pytest-cov
    pytest-mock
    aiserve<2
    flask
    werkzeug>=1.0.0,<2
develop =
    pylint
    pytest
    pydocstyle
    pytest-cov
    pytest-datadir
    pre-commit
    mypy
    aiserve<2
    werkzeug>=1.0.0,<2
service =
    aiserve<2
    flask
    werkzeug>=1.0.0,<2

[mypy]
ignore_missing_imports = true

[isort]
line_length = 88
multi_line_output = 3
known_first_party=aiqcheck
include_trailing_comma=True
use_parentheses=True
default_section = THIRDPARTY
force_sort_within_sections=True
order_by_type=False
