[metadata]
name = aiserve
description=Barebone Service as a RESTApi
author = Thaddaeus Strobel
maintainer-email = thaddaeus.strobel@ai4bd.com

[options]
setup_requires =
  setuptools_scm
package_dir =
    =src
packages = find:
include_package_data = true
install_requires =
    click
    Flask>=1.1.1, <2
    flask-restful>=0.3.7, <1
    flask_api>=1.1, <2
    psutil>=5.7, <6
    requests
    werkzeug>=1, <2


[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-mock
    testfixtures
develop =
    mypy
    pre-commit
    pydocstyle
    pylint
    pytest

[options.entry_points]
console_scripts =
    aiserve-upload = aiserve.upload_cli:start_cli_for_uploading

[mypy]
ignore_missing_imports = true

[pydocstyle]
convention = numpy

[flake8]
max-line-length = 88

[isort]
line_length = 88
multi_line_output = 3
known_first_party=aiserve
include_trailing_comma=True
use_parentheses=True
default_section = THIRDPARTY
force_sort_within_sections=True
order_by_type=False

[semantic_release]
version_variable = /dev/null:__version__
version_source = tag
